(fix) tweaked search overflow

--- a/app/common/stylesheets/application.scss
+++ b/app/common/stylesheets/application.scss
@@ -22,7 +22,7 @@
 }
 
 .search {
-  overflow: hidden;
+  overflow-x: hidden;
   input[type="text"] {
     border: 1px solid rgba(0,0,0,0.125);
   }
